<!--

   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-parent</artifactId>
     <version>33</version>
  </parent>

  <groupId>org.apache.commons</groupId>
  <artifactId>commons-jcs</artifactId>
  <packaging>jar</packaging>
  <version>2.0-SNAPSHOT</version>
  <name>Commons JCS</name>
  <url>http://commons.apache.org/proper/commons-jcs/</url>
  <description>Apache Commons JCS is a distributed, versatile caching system.</description>
  <inceptionYear>2002</inceptionYear>

  <dependencies>

    <!--  REQUIRED FOR JCS CORE -->
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1.3</version>
    </dependency>

    <!--  JDBC DISK CACHE -->
    <dependency>
      <groupId>commons-dbcp</groupId>
      <artifactId>commons-dbcp</artifactId>
      <version>1.3</version>
      <optional>true</optional>
    </dependency>

    <!--  JDBC DISK CACHE -->
    <dependency>
      <groupId>commons-pool</groupId>
      <artifactId>commons-pool</artifactId>
      <version>1.5.4</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>1.7.3.3</version>
      <!-- <version>1.8.0.7</version> -->
      <optional>true</optional>
    </dependency>

    <!--  For comparative performance tests only -->
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>3.2.1</version>
      <scope>test</scope>
    </dependency>

    <!--  Test dependencies -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.16</version>
      <scope>test</scope>
    </dependency>

<!-- Exclude for now -->
    <!-- dependency>
      <groupId>org.jgroups</groupId>
      <artifactId>jgroups</artifactId>
      <version>3.4.1.Final</version>
      <optional>true</optional>
    </dependency -->

    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity-tools</artifactId>
      <version>2.0</version>
      <optional>true</optional>
    </dependency>

    <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
       <version>3.0.1</version>
       <optional>true</optional>
    </dependency>

    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
       <optional>true</optional>
    </dependency>

  </dependencies>

  <issueManagement>
    <system>jira</system>
    <url>http://issues.apache.org/jira/browse/JCS</url>
  </issueManagement>

  <scm>
    <connection>scm:svn:http://svn.apache.org/repos/asf/commons/proper/jcs/trunk</connection>
    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/commons/proper/jcs/trunk</developerConnection>
    <url>http://svn.apache.org/viewvc/commons/proper/jcs/trunk</url>
  </scm>

  <mailingLists>
    <mailingList>
      <name>Jakarta JCS User List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-jcs-users/</archive>
    </mailingList>
    <mailingList>
      <name>Jakarta JCS Developer List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-jcs-dev/</archive>
    </mailingList>
    <mailingList>
      <name>OLD User List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-turbine-jcs-user/</archive>
    </mailingList>
    <mailingList>
      <name>OLD Developer List Archive</name>
      <subscribe></subscribe>
      <unsubscribe></unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/jakarta-turbine-jcs-dev/</archive>
    </mailingList>
    <mailingList>
      <name>Commons User List</name>
      <subscribe>user-subscribe@commons.apache.org</subscribe>
      <unsubscribe>user-unsubscribe@commons.apache.org</unsubscribe>
      <post>user@commons.apache.org</post>
      <archive>http://mail-archives.apache.org/mod_mbox/commons-user/</archive>
      <otherArchives>
        <otherArchive>http://markmail.org/list/org.apache.commons.users/</otherArchive>
        <otherArchive>http://old.nabble.com/Commons---User-f319.html</otherArchive>
        <otherArchive>http://www.mail-archive.com/user@commons.apache.org/</otherArchive>
        <otherArchive>http://news.gmane.org/gmane.comp.jakarta.commons.user</otherArchive>
      </otherArchives>
    </mailingList>
    <mailingList>
      <name>Commons Dev List</name>
      <subscribe>dev-subscribe@commons.apache.org</subscribe>
      <unsubscribe>dev-unsubscribe@commons.apache.org</unsubscribe>
      <post>dev@commons.apache.org</post>
      <archive>http://mail-archives.apache.org/mod_mbox/commons-dev/</archive>
      <otherArchives>
        <otherArchive>http://markmail.org/list/org.apache.commons.dev/</otherArchive>
        <otherArchive>http://old.nabble.com/Commons---Dev-f317.html</otherArchive>
        <otherArchive>http://www.mail-archive.com/dev@commons.apache.org/</otherArchive>
        <otherArchive>http://news.gmane.org/gmane.comp.jakarta.commons.devel</otherArchive>
      </otherArchives>
    </mailingList>
    <mailingList>
      <name>Commons Issues List</name>
      <subscribe>issues-subscribe@commons.apache.org</subscribe>
      <unsubscribe>issues-unsubscribe@commons.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/commons-issues/</archive>
      <otherArchives>
        <otherArchive>http://markmail.org/list/org.apache.commons.issues/</otherArchive>
        <otherArchive>http://old.nabble.com/Commons---Issues-f25499.html</otherArchive>
        <otherArchive>http://www.mail-archive.com/issues@commons.apache.org/</otherArchive>
      </otherArchives>
    </mailingList>
    <mailingList>
      <name>Commons Commits List</name>
      <subscribe>commits-subscribe@commons.apache.org</subscribe>
      <unsubscribe>commits-unsubscribe@commons.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/commons-commits/</archive>
      <otherArchives>
        <otherArchive>http://markmail.org/list/org.apache.commons.commits/</otherArchive>
        <otherArchive>http://www.mail-archive.com/commits@commons.apache.org/</otherArchive>
      </otherArchives>
    </mailingList>
    <mailingList>
      <name>Apache Announce List</name>
      <subscribe>announce-subscribe@apache.org</subscribe>
      <unsubscribe>announce-unsubscribe@apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/www-announce/</archive>
      <otherArchives>
        <otherArchive>http://markmail.org/list/org.apache.announce/</otherArchive>
        <otherArchive>http://old.nabble.com/Apache-News-and-Announce-f109.html</otherArchive>
        <otherArchive>http://www.mail-archive.com/announce@apache.org/</otherArchive>
        <otherArchive>http://news.gmane.org/gmane.comp.apache.announce</otherArchive>
      </otherArchives>
    </mailingList>
  </mailingLists>

  <developers>
    <developer>
      <id>asmuts</id>
      <name>Aaron Smuts</name>
      <email>asmuts@apache.org</email>
      <organization />
    </developer>
    <developer>
      <id>jtaylor</id>
      <name>James Taylor</name>
      <email>james@jamestaylor.org</email>
      <organization />
    </developer>
    <developer>
      <id>hchar</id>
      <name>Hanson Char</name>
      <email>hchar@apache.org</email>
      <organization />
    </developer>
    <developer>
      <id>tsavo</id>
      <name>Travis Savo</name>
      <email>tsavo@ifilm.com</email>
      <organization>IFilm</organization>
    </developer>
    <developer>
      <id>tv</id>
      <name>Thomas Vandahl</name>
      <email>tv@apache.org</email>
      <organization />
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Scott Eade</name>
      <email>seade@backstagetech.com.au</email>
    </contributor>
    <contributor>
      <name>Michael Stevens</name>
      <email>mstevens@etla.org</email>
    </contributor>
  </contributors>

  <build>
    <sourceDirectory>src/java</sourceDirectory>
    <testSourceDirectory>src/test</testSourceDirectory>
    <testResources>
        <testResource>
            <directory>src/test-conf</directory>
            <includes>
                <include>**/*.properties</include>
                <include>**/*.ccf</include>
            </includes>
        </testResource>
    </testResources>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${commons.surefire.version}</version>
          <configuration>
            <argLine>-Xmx256m -Djava.security.manager -Djava.security.policy=${basedir}/src/conf/cache.policy</argLine>
            <forkMode>pertest</forkMode>
            <includes>
                <include>**/*UnitTest.java</include>
            </includes>
            <excludes>
                <!--
                    Several of the test cases rely on background tasks that are timing
                    sensitive.
                -->
                <!-- You need to manually run these test cases. -->
                <exclude>**/BlockDiskElementDescriptorUnitTest.java</exclude>
                <exclude>**/HSQLDiskCacheConcurrentUnitTest.java</exclude>
                <exclude>**/HSQLDiskCacheUnitTest.java</exclude>
                <exclude>**/IndexedDiskCacheOptimizationUnitTest.java</exclude>
                <exclude>**/TestTCPLateralUnitTest.java</exclude>
                <exclude>**/UDPDiscoveryUnitTest.java</exclude>
                <!-- Causes hang in Continuum -->
                <exclude>**/UDPDiscoverySenderUnitTest.java</exclude>
                <!-- The ones that fail may be different for you. -->
                <!-- <exclude>**/JDBCDiskCacheRemovalUnitTest.java</exclude> -->
                <!-- <exclude>**/JDBCDiskCacheUnitTest.java</exclude> -->
            </excludes>
            <source>${maven.compiler.source}</source>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>rmic-maven-plugin</artifactId>
          <version>1.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <!-- We need to generate some stub/skel classes with RMIC -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>rmic-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>rmic</id>
            <goals>
              <goal>rmic</goal>
            </goals>
            <configuration>
              <includes>
                <include>**/RemoteCacheListener.class</include>
                <include>**/RemoteCacheServer.class</include>
              </includes>
              <outputDirectory>${project.build.outputDirectory}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <targetJdk>1.6</targetJdk>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>2.5.3</version>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <!-- Override Commons parent release profile -->
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <!-- build the source and binary distribution packages -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <!-- only the parent has assembly descriptors -->
                  <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                  <descriptors>
                    <descriptor>src/assembly/bin.xml</descriptor>
                    <descriptor>src/assembly/src.xml</descriptor>
                  </descriptors>
                  <tarLongFileFormat>gnu</tarLongFileFormat>
                </configuration>
              </execution>
            </executions>
          </plugin>      
        </plugins>
      </build>
    </profile>    
  </profiles>

  <properties>

    <!-- Default configuration for compiler source and target JVM -->
    <maven.compiler.sourceEncoding>UTF-8</maven.compiler.sourceEncoding>
  	<maven.compiler.source>1.6</maven.compiler.source>
  	<maven.compiler.target>1.6</maven.compiler.target>

    <commons.componentid>jcs</commons.componentid>
    <commons.release.version>2.0</commons.release.version>
    <commons.release.desc>(Java 6.0+)</commons.release.desc>
    <!-- The RC version used in the staging repository URL. -->
    <commons.rc.version>RC1</commons.rc.version>
    <commons.jira.id>JCS</commons.jira.id>
    <commons.site.path>commons-jcs</commons.site.path>
    <commons.scmPubUrl>https://svn.apache.org/repos/infra/websites/production/commons/content/proper/${commons.site.path}</commons.scmPubUrl>
    <!-- Ensure copies work OK (can be removed later when this is in parent POM) -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <commons.encoding>UTF-8</commons.encoding>
    <commons.javadoc.java.link>http://docs.oracle.com/javase/6/docs/api/</commons.javadoc.java.link>

    <test.type>Unit</test.type>
  </properties>

</project>
